learn Ionic button/list/icon/ *need to check why diffrent"

--- a/conFusion/www/templates/contactus.html
+++ b/conFusion/www/templates/contactus.html
@@ -1,5 +1,26 @@
 <ion-view view-title="Contact Us">
   <ion-content>
-    <h1>Contact Us</h1>
+     <div class="card">
+          <div class="item item-divider">
+            Location Information 
+          </div>
+          <div class="item item-text-wrap">
+            
+            <h1>Our Address</h1>
+            <h2>121, Clear Water Bay Road</h2>
+            <h2>Clear Water Bay, Kowloon</h2>
+            <h2>HONG KONG</h2>
+              <h2> <i class="icon ion-ios-telephone"></i> Tel: +852 1234 5678</h2>    
+              <h2> <i class="icon ion-email"></i>  Fax: +852 8765 4321</h2> 
+              <h2> <i class="icon ion-clipboard"></i>  Email:confusion@food.net</h2> 
+          </div>  
+
+            <div class="button-bar">
+              <a class="button button-positive"> <i class="icon ion-ios-telephone"></i> Call</a>
+              <a class="button button-calm"> <i class="icon ion-social-skype-outline"></i> Skype</a>
+              <a class="button button-balanced"> <i class="icon ion-email"></i>  Email</a>
+            </div> 
+         
+      </div>
   </ion-content>
 </ion-view>
