--- a/conFusion/www/templates/favorites.html
+++ b/conFusion/www/templates/favorites.html
@@ -2,7 +2,7 @@
     <ion-nav-buttons side="secondary">
         <div class="buttons">
         <button class="button button-icon icon ion-ios-minus-outline"
-            ng-click="toggleDelete()"></button>
+            ng-click=popover.show($event)""></button>
         </div>
     </ion-nav-buttons>
   <ion-content>
