--- a/conFusion/www/templates/addComment.html
+++ b/conFusion/www/templates/addComment.html
@@ -26,7 +26,7 @@
         </label>
 
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Reserve</button>
+          <button class="button button-block button-positive" type="submit">Submit</button>
         </label>
       </div>
     </form>
